--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -35,4 +35,12 @@
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
+<script>
+    function ready() {
+    }
+    //random number between 1 and 100 for demo
+    var userId = Math.floor((Math.random() * 100) + 1); document.addEventListener(“DOMContentLoaded”, ready);
+</script>
+<script src=”~/lib/signalr/signalr.js”></script>
+<script src=”~/js/notification.js”></script>
 
