--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,6 +4,7 @@
      https://firebase.google.com/docs/web/setup#available-libraries -->
 <script src="https://www.gstatic.com/firebasejs/7.14.4/firebase-analytics.js"></script>
 
+
 <script>
     // Your web app's Firebase configuration
     var firebaseConfig = {
@@ -31,16 +32,74 @@
 
 
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
 <script>
-    function ready() {
+    function continueToChat() {
+        $('#spn-nick').text($('#nick').val());
+        $('#entrance').hide();
+        $('#chat').show();
     }
-    //random number between 1 and 100 for demo
-    var userId = Math.floor((Math.random() * 100) + 1); document.addEventListener(“DOMContentLoaded”, ready);
 </script>
-<script src=”~/lib/signalr/signalr.js”></script>
-<script src=”~/js/notification.js”></script>
+<div class="form-group">
+    &nbsp;
+</div>
+
+<div id="entrance">
+    <label for="nick">Enter your nickname:</label>
+    <input type="text" id="nick" />
+    <button onclick="continueToChat()">Continue</button>
+</div>
+
+<div id="chat" style="display: none">
+    <h3 id="spn-nick"></h3>
+    <form id="frm-send-message" action="#">
+        <label for="message">Message:</label>
+        <input type="text" id="message" />
+        <input type="submit" id="send" value="Send" class="send" />
+    </form>
+    <div class="clear">
+    </div>
+    <ul id="messages"></ul>
+</div>
+
+<script src="lib/signalr/signalr.min.js"></script>
+
+<script>
+
+    const connection = new signalR.HubConnectionBuilder()
+        .withUrl("https://dev.chococrm.com:1118/Chat")
+        .build();
+
+    connection.start().catch(err => console.error(err.toString()));
+
+    connection.on('Send', (nick, message) => {
+        appendLine(nick, message);
+    });
+
+    document.getElementById('frm-send-message').addEventListener('submit', event => {
+        let message = $('#message').val();
+        let nick = $('#spn-nick').text();
+
+        $('#message').val('');
+
+        connection.invoke('Send', nick, message);
+        event.preventDefault();
+    });
+
+    function appendLine(nick, message, color) {
+        let nameElement = document.createElement('strong');
+        nameElement.innerText = `${nick}:`;
+
+        let msgElement = document.createElement('em');
+        msgElement.innerText = ` ${message}`;
+
+        let li = document.createElement('li');
+        li.appendChild(nameElement);
+        li.appendChild(msgElement);
+
+        $('#messages').append(li);
+    };
+
+</script>
+
+
 
